Update 3.5 podcast transcription

--- a/content/podcast/3.5.md
+++ b/content/podcast/3.5.md
@@ -12,7 +12,7 @@ audioSrc: "https://www.buzzsprout.com/1097978/11182169-jean-yang-founder-and-ceo
 videoID: "YfziGdLw24s"
 ---
 
-Jean Young is the founder and CEO of Akita software, the eBPF powered API observability service. Prior to starting Akita, Jean was a professor at CMU where she worked on programming language design.
+Jean Young is the founder and CEO of Akita software, the eBPF-powered API observability service. Prior to starting Akita, Jean was a professor at CMU where she worked on programming language design.
 
 <YouTube id="YfziGdLw24s" title="Adam Berry, Senior Staff Engineer at Amplitude" />
 
@@ -32,116 +32,76 @@ Jean Young is the founder and CEO of Akita software, the eBPF powered API observ
 **Highlights:**
 
 * Making like little VB interfaces
-* Computer science is really different than programming
+* Computer science is really different to programming
 * Trialing co-founders
 
 ## Transcript
 
-**Beyang:** All welcome back to another addition to the Sourcegraph podcast. Today, I'm here with Jean Young, the founder and CEO of Akita software, the eBPF powered API observability system prior to starting Akita. Jean was a professor at CMU where she worked on programming language design. Jean, welcome to the show.
-
-**Beyang:** Yeah.
+**Beyang:** Welcome back to another edition of the Sourcegraph podcast. Today I'm here with Jean Young, the founder and CEO of Akita software, the eBPF-powered API observability system. Prior to starting Akita, Jean was a professor at CMU where she worked on programming language design. Jean, welcome to the show.
 
 **Jean:** Thank you. Glad to be here.
 
-**Beyang:** Awesome. So to kick things off how did you get into
+**Beyang:** Awesome. So to kick things off, how did you get into programming?
 
-**Jean:** programming? Both my parents were computer scientists, so they had started out as electrical engineers, way back in the day before computer science was a thing. They both got into computers. So we had a terminal in our home pretty early on and I, I guess like many other parents, they like to teach their kids what they do.
+**Jean:** Both my parents were computer scientists, so they had started out as electrical engineers way back in the day before computer science was a thing. They both got into computers. So we had a terminal in our home pretty early on and, I guess like many other parents, they liked to teach their kids what they do.
 
-**Jean:** So I, I learned basic pretty early. Like I think they taught it to me when I was like six. We had, we had a computer in our home, like pretty early. I taught myself web programming and pretty much like as soon as I got an internet connection, I just got really into the internet.
+So I learned BASIC pretty early—I think they taught it to me when I was, like, six. We had a computer in our home pretty early. I taught myself web programming and pretty much as soon as I got an internet connection, I just got really into the internet. And in fact, I had my internet time limited. And so it felt like a thing you're not really supposed to do, you're like rebelling... So I think that programming was a thing that everybody in my family does, but web programming, like, that's the thing that you only get to do for a limited time a day.
 
-**Jean:** And in fact, I had my internet time limited. And so it felt like a thing, you're not really supposed to do. You're like rebelling and . Yeah. So I think that, like programming was a thing that everybody in my family does, but web programming, like that's the thing that you only get to do for a limited time a day.
+**Beyang:** That's hilarious. Do you have an earliest programming memory? Like, something to do with BASIC or web programming that stands out?
 
-**Beyang:** That's hilarious. What was your, do you have an earliest programming memory, like something to do with like basic or web programming that stands out?
+**Jean:** I was pretty into Visual Basic actually, because I would make these little visual interfaces to click through, but you couldn't really share it. So that's actually why I got really into web stuff. Because before the web, I was like, "All right, I'm making like little VB interfaces, but there's nobody else—like literally nobody else—that can run them." So I didn't really understand. I was just like, "How do people ship this stuff? Like, how's anything work?" 
 
-**Jean:** I was pretty into visual basic actually, cuz I would make these like little visual interfaces to click through, but I didn't really have any you couldn't really share it so that that's actually why I got really into web stuff.
+But I think that when I started doing web stuff and I discovered JavaScript—which is funny, because I don't do any frontend stuff anymore—but I was like, "Whoa! Stuff that runs on the internet is amazing. You can just share it with people."
 
-**Jean:** Because before the web, I was like, all right, I'm making like little VB interfaces, but there's nobody else like literally nobody else that can run them. Cause I didn't really understand. I was just like how do people ship this stuff? Like how's anything work. But I think that like when I started doing web stuff and when I discovered JavaScript, which is funny, cuz I don't do like any front end stuff anymore.
+**Beyang:** That's awesome. What were some of the things that you built on the web in those early days?
 
-**Jean:** But then I was like, whoa, stuff that runs on the internet is amazing. You can just share it with people.
+**Jean:** A lot of websites. I had a website about everything that I cared about. I had a Tamagotchi website—I was really devoted to it. I built my friends websites. I had chat rooms on all my websites. It was a very very social for me. It was very much about interconnectedness.
 
-**Beyang:** That's awesome. What were some of the things that you built on the web in those early
+**Beyang:** That's awesome. That's awesome. Did you make any friends on the internet?
 
-**Jean:** days? A lot of websites. I had, I had a website about everything that I cared about. I had a Tamagotchi website.
+**Jean:** No, not really. I think most of my internet friends were, like, pretty random, creepy people. I mostly just talked to my existing friends and I think that my parents warned me off internet friends pretty early on. So I think that was not something I spent a lot of time doing.
 
-**Jean:** I was really devoted to it. I had websites, I built my friend's websites. I had chat rooms and all my websites. It was a very very social for me. It was like very much about interconnectedness.
+**Beyang:** Makes sense. Cool. And from there, was it kinda like pretty much a straight shot to studying computer science in university? Or what led you down that path?
 
-**Beyang:** That's awesome. That's awesome. Did you make any friends on the
+**Jean:** Yeah, that's a great question. So, my mom, my dad they were both doing computer science and programming—my mom still works as a professional programmer today. My uncle also. I'm the oldest cousin, but most of my cousins, like everybody, except for one person—all my cousins in America, I guess But I think that, when I was figuring out what I wanted to do, I think my feeling was like, we immigrated to America so that we could have other options. You can do anything. You can be a doctor, you can be a lawyer, you can go into politics. You can't be the president, but you can be many other things. And they really wanted me to explore my options. Because they were all like, "We ended up in this because the government assigned it to us. Maybe you should do something else." 
 
-**Jean:** internet? No, not really. I think I, like most of my internet friends were like pretty like random, creepy people.
+Yeah. And then I think there was also a lot of gendered stuff, you know. At the time, computer science wasn't as mainstream. I think a lot of people saw it, some of my teachers saw it as not really, like, a "girl thing"—which I think they would really take back today. But at the time, no one knew very much about it. 
 
-**Jean:** I think. I didn't really, I mostly just talked to my existing friends and I think that, my, my parents are pretty like warn me off of internet friends pretty early on. So I think that was not something I spent a lot of time
+So I declared economics my first year of college. I realized I didn't care at all about the economics classes. Like, when it came time to fill out my course syllabus, I just copied it off my friend. I was like, "Hey, what courses are you taking? I'll just take the same ones."
 
-**Beyang:** doing. Yeah. Makes. Cool. And from there, was it kinda like a pretty much like straight shot to studying computer science in university?
+**Beyang:** Okay, so your natural proclivities and inclinations led you back to computer science. At what point did you make it official? Was there a point where you' were like, "Ah, this economics—
 
-**Beyang:** Or, what led you down that path? Yeah,
+**Jean:** Yeah, sophomore year. Because I took computer science classes the whole time. I was like, "Man, this economics thing isn't working out." So I was actually pre-med for one semester and I took two semesters of organic chemistry. And then I was like, "This pre-med stuff is really intense. It's the opposite of what I wanna be doing." Also, like, taking organic chemistry without taking other chemistries was pretty rough, but I figured it out by the end.
 
-**Jean:** that's a great question, even though so my mom, my dad they're both doing computer science and programming, so my mom still works as a professional programmer today. My uncle also computer S. I'm the oldest cousin, but like most of my cousins, like everybody, except for one person works in some kind of that's incredible programming or computer science or all my cousins in America, yeah. But yeah, but I think that, when I was figuring out what I wanted to do, I think I'm. my family was like we immigrated to America so we could have other options. You can do anything. You can be the doctor. You can be a doctor, you can be a lawyer, you can go into politics.
+**Beyang:** I feel like everyone's, "Oh, that's, like, a huge leap..."
 
-**Jean:** You can't be the president, but you can be many other things. And they really wanted me to explore my options. Cause they're like, we all ended up in this cuz the government assigned it to. Maybe you should do something else. Yeah. And then I think there's also like a lot of gendered stuff. I think, at the time there, computer science wasn't as mainstream.
+**Jean:** Yeah, I was like, "You know, I was pretty good at AP Chem, so I think I can just do it." I remember for the whole first semester, I just didn't really know... I didn't know what anything was called, because it's a lot of nomenclature. So I completely studied the wrong section of the textbook for all of the tests. So then when it came to the final, I went to the final study session, and I was like, "Hey, I'm not doing so well in this class." And then I was like, "Oh! I've been studying the wrong section of the book." And then I did really well on the final, because I finally studied the right section of the book. And then the TA was like, "Oh my God, I've never seen someone improve so much. You can do anything." And I was just like, "No, I was really just studying the wrong section of the book. But yes, it was you, you helped me." Yeah, I think every teacher likes to believe they saved someone, so I feel like she really believed she saved me. But I was really confused, because I didn't even know what anything was called. I was like, "Let me just study the metal section of the book" and "Oh shoot. Like, the whole test is on the other book section."
 
-**Jean:** I think a lot of people saw it as, my, some of my teachers saw it as like a not really like a. A girl thing, which was I think, they would really take back today, but at the time, no one just, no one knew very much about it. I declared economics my first year of college.
+**Beyang:** That's crazy. Okay. So what I'm getting so far is, you come from a family of geniuses and you are yourself a genius.
 
-**Jean:** I realized I didn't care at all about the economics classes. Like when I came time to fill out my course syllabus, I just copied it off my friend. I was like, Hey, what courses are you taking? I'll just take the same.
+**Jean:** Well, I think computer science is just a skill. It's like writing or math, anyone can do it. Anyone can get better at it. Yeah. I think when that's your family, it's just like, you start learning it, you learn more of it, and anyone can get better at it. And I think that's a big part of why I believe in the accessibility of this stuff, actually. I think there's no magic about it. There should be less and less magic about this stuff as it becomes more and more a part of our lives.
 
-**Beyang:** Cool. Okay. So your kinda like natural proclivities and inclinations led you back to computer science.
+**Beyang:** Hundred percent. When you were going through undergrad CS, having had the background that you did, you know, exposure to computers at an early age, do you feel like your experience was unique in some ways, or, how did you view yourself as going through the program?
 
-**Beyang:** At what point did you make it official? Was there a point where you're like, ah, this
+**Jean:** I think computer science is really different than programming. And I think that if you have been exposed to computers more, it doesn't actually help you in a lot of stuff. Like, it helps you some because you don't have to make the initial leap to procedural thinking and thinking algorithmically a little bit. So I taught at Carnegie Melin for a couple years, and when I was teaching, something that people told me there and that I think is true just across everything I've seen, is people who show up having programmed a lot still haven't really learned the concepts most of the time. Like, you might have programmed but how well do you understand algorithms or how well do you understand recursion?
 
-**Jean:** economics yeah, sophomore year? Cause I took computer science classes the whole time. I think I was like, man, this economics thing isn't working out. So I was actually pre-med for one semester and I took two semesters of organic C.
+And I think that I had a bit of a chip on my shoulder initially. Like, I should know this stuff better, I've seen it for a long time. And I think that got in my way. I think there's just stuff everyone has to learn initially. 
 
-**Jean:** And then I was like, this pre-med stuff is like really intense. It's the opposite of what I wanna be doing. Also like taking organic chemistry without taking other chemistries was pretty rough, but like I figured it out by the end but I was like,
+**Beyang:** Yeah, a hundred percent. 
 
-**Beyang:** man, this is you would string to O chem. I feel like everyone's oh, that's like a huge leap when you go from
+**Jean:** And I think that this is really at odds with... I think a lot of people are like, "Oh, computer science education... Why do that if you've been programming?" But I think for me, learning the concepts was quite a different thing than learning web programming, for instance.
 
-**Jean:** I was like, I was pretty good.
+**Beyang:** Yeah, there's something to be said for learning the principle foundations and the theory behind something, thinking through it in a rigorous fashion.
 
-**Jean:** AP chem. So I think I can just do it. I remember for the whole first semester, I just didn't really know. I was like, I I don't know. I didn't know what anything was called, cause it's a lot of nomenclature. And so I completely studied the wrong section of the textbook for all of the test.
+**Jean:** Yeah. Or thinking algorithmically or proving things about what you're programming and proving bounds about your algorithms. I think that most people never have to do it again, but it was definitely useful.
 
-**Jean:** And so then when I came to the final, I like went to the final study session and I was like, Hey, I'm like not doing so well in this class. And I was like, oh, I've been studying the wrong section of the book. And then I got I did really well on the final cause I finally studied the right section of the book.
+**Beyang:** Do you think that appeal—like, it was this new part of computer science that kind of transitioned from hacking on stuff and just being very hands-on on the application side to like diving into the theory—did that lead you into programming languages? Was that kind of the motivation or interest there?
 
-**Jean:** And then the TA was like, oh my God, I've never seen someone improve so much. You can do anything. Amazing. And I was just like, no, I was really just studying like the wrong section of the book. But yes, it was you helped me. Yeah, I think that, every teacher likes to believe they like save someone.
+**Jean:** Yeah. Yeah. Because I think for me, one of the main reasons I didn't want to do computer science or I listened to other people when they were like, "Oh, you probably don't wanna do this" was I thought the tools were just crap. I was like, "Man, nothing makes any sense. It works, like, 80% of the time." I didn't realize that there are fundamental concepts that this was based on. Because I was like, "All this stuff is kind of a mess." 
 
-**Jean:** And so I feel like she really believed she saved me but I was really confused that's cause I didn't even I just didn't know what anything was called. Just let me study the metal section of the book and oh shoot. Like the whole test is on the other book section.
+And I feel like, if I had learned it theory first, I'd just be like, "Okay, yeah." But when I learned the theory after experiencing the tools for a long time, I was like, "What, you mean this can be clean? And it was supposed to be like this?" And so I think it was partly that—where I was like, "Okay, I think it'd be very interesting to spend my career cleaning this up."—and I think another part of it was very selfishly motivated where I loved the theory, I loved my theory of computation class, I thought algorithms was really fun. And so I asked myself, "How can I do more of it? Because this does not seem to apply to the kind of hacking I was doing before. So what kind of stuff could I be doing to get closer to doing this kind of work in my everyday life?"
 
-**Beyang:** That's crazy.
-
-**Beyang:** Okay. So what I'm getting so far is you come from a family of geniuses and you are yourself a genius.
-
-**Jean:** Well, I think computer science is just a skill it's like writing or math, it's anyone can do it. Anyone can get better at it. Yeah. I think that when that's your family, that's it's just you start learning it, you learn more of it.
-
-**Jean:** Anyone can get better at it. And. I think that's a big part of why I believe in accessibility of this stuff, actually. I think there's not like there's no magic about it. There should be less and less magic about this stuff as it becomes more and more a part of our lives,
-
-**Beyang:** a hundred percent.
-
-**Beyang:** When you were going through undergrad CS, having had the background that you did, exposure to computers in an early age do you feel like your experience was unique in some ways, or, how did you view yourself as going through the program?
-
-**Jean:** I think computer science is really different than programming.
-
-**Jean:** That's and I think that if you have been exposed to computers more, it doesn't actually help you in a lot of stuff. Like it helps you some cuz you don't have to make the initial leap to Procedural thinking and thinking thinking algorithmically a little bit, but like when I, so I taught at Carnegie Melin for a couple years when I was teaching something that people told me there.
-
-**Jean:** And that I think is true just across everything I've seen is people People who show up, having programmed a lot, like still haven't really learned the concepts most of the time. You, you might have programmed, but like how well do you understand algorithms or how well do you understand recursion?
-
-**Jean:** And I think that I had a bit of a chip on my shoulder initially. I should know this stuff better. I like, I've seen it for a long time. And I think that got in my way. I think that, there's just stuff everyone has to learn initially. Yeah, a hundred percent. And I think that this is really at odds with I think a lot of people are like, oh, computer science education.
-
-**Jean:** Like, why do that if you've been programming. But I think for me like learning the concepts was quite a different thing than learning like web programming, for instance,
-
-**Beyang:** This something you said for learning, I guess like the principled foundations and the theory behind something, thinking through it in like a kind of like rigorous fashion.
-
-**Jean:** Yeah. Or thinking algorithmically or, like proving things about what you're programming and proving bounds about your algorithms. I think that most people never have to do it again, but it was definitely
-
-**Beyang:** useful. Do you think like that appeal, like it was like this new part of computer science that kind of transitioned from hacking on stuff and just being like very hands on, on, on the application side to like diving into the theory.
-
-**Beyang:** Did that lead you into like programming languages? Was that kind of the. The motivation or interest there.
-
-**Jean:** Yeah. Yeah. Cuz I think for me, one of the main reasons I didn't want to do computer science or I listened to other people when they were like, oh, you probably don't wanna do this was I thought the tools were just crap.
-
-**Jean:** I was like, man, like nothing makes any sense. It works like 80% of the time. I didn't realize that there are like fundamental concepts that this was based on . Cause I was like, all this stuff is a. And I feel like if I had learned it theory first, I'd just be like, okay. Yeah. But, when I learned the theory after experiencing the tools for a long time, I was like, what you mean?
-
-**Jean:** This can be clean. And it was supposed to be like this. And so I think. That. So it was partly that where I was like, okay, I think it'd be very interesting to spend my career cleaning this up. And I think another part of it was very selfishly motivated where I loved the theory.
-
-**Jean:** I loved my theory of computation class. I thought algorithms was really fun. And I ask myself, how can I do more of it? Because this does not seem to apply to the kind of hacking I was doing before. So what kind of stuff could I be doing to get closer to doing doing this kind of work in my everyday life?
-
-**Jean:** And so I will say now as a company founder, I don't really get to do that stuff, but I feel like it's based on those ideas.
+And so I will say now, as a company founder, I don't really get to do that stuff, but I feel like it's based on those ideas.
 
 **Beyang:** When you graduated from undergrad, I feel like maybe a fork in the road for a lot of people is do you go and get a graduate degree and do research or do you go into industry?
 
